--- a/css/styles.css
+++ b/css/styles.css
@@ -373,3 +373,14 @@ td.pad-7-rem {
     height: 20px;
     margin: 0 8px;
 }
+
+.fieldset-scrollable {
+    max-height: 400px;
+    overflow-y: auto;
+    border: 1px solid #ccc;
+    padding: 10px;
+}
+
+.w-98 {
+    min-width: 98px;
+}
