add: Tabla usuario con actualizar y modificar

--- a/css/styles.css
+++ b/css/styles.css
@@ -341,6 +341,10 @@ main.table-responsive {
     margin: 0 0 0 20px;
 }
 
+.margin-bottom50 {
+    margin-bottom: 50px;
+}
+
 .decoration-none {
     text-decoration: none;
     color: #000;
