--- a/css/styles.css
+++ b/css/styles.css
@@ -345,8 +345,8 @@ main.table-responsive {
     margin: 0 10px;
 }
 
-.margin-left20 {
-    margin: 0 0 0 20px;
+.margin-left5 {
+    margin: 0 0 0 5px;
 }
 
 .margin-bottom50 {
@@ -395,6 +395,10 @@ td.pad-7-rem {
     overflow-y: auto;
     border: 1px solid #ccc;
     padding: 10px;
+}
+
+.min-wc {
+    min-width: 200px;
 }
 
 .w-98 {
@@ -459,4 +463,79 @@ td.pad-7-rem {
 .section-button {
     padding: 4px 25px;
     border-radius: 10px;
+}
+
+.hidden {
+    display: none;
+}
+
+.boton-elegante {
+    padding: 0;
+    border: 1px solid transparent;
+    background-color: #ffffff;
+    color: #333333;
+    font-size: 0.9rem;
+    cursor: pointer;
+    border-radius: 0;
+    transition: background-color 0.4s ease, color 0.4s ease;
+    outline: none;
+    width: 24px;
+    height: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+}
+
+.boton-elegante:hover {
+    border-color: #dddddd;
+    background-color: #f5f5f5;
+    color: #363636;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    top: 100%;
+    right: 0;
+    background-color: #f9f9f9;
+    min-width: 180px;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    border-radius: 4px;
+    font-size: 12px;
+    box-sizing: border-box;
+    padding: 0;
+    user-select: none;
+}
+
+.dropdown-content .dropdown-item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 8px 12px;
+    width: 100%;
+    cursor: pointer;
+}
+
+.dropdown-content .dropdown-item:hover {
+    background-color: #f1f1f1;
+}
+
+.dropdown-content label {
+    flex-grow: 1;
+}
+
+.dropdown-content input[type="checkbox"] {
+    color-scheme: none;
+    cursor: pointer;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
 }
