--- a/css/styles.css
+++ b/css/styles.css
@@ -217,6 +217,10 @@ main.table-responsive {
     padding: 20px;
 }
 
+.pad-10-20 {
+    padding: 10px 20px 20px 20px;
+}
+
 .pad-top-0 {
     padding-top: 0 !important;
 }
